TestCases/ASTTests/SemanticErrorsTests/tests/test32.c
int main(){
    x = 3;
    {
        int x;
    }
        return 0;

}